# freeglut-feedstock

./: .travis.yml  README.md  appveyor.yml  conda-forge.yml
.azure-pipelines/: azure-pipelines-win.yml
.circleci/: build_steps.sh
.github/: CODEOWNERS
.scripts/: build_steps.sh
ci_support/: run_docker_build.sh
recipe/: bld.bat  build.sh  disable_autolink_windows.patch  meta.yaml  run_test.bat  run_test.sh
recipe/test/: CMakeLists.txt  test.c
